# opengl-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
include/: camera.h  chunk.h  chunk_faces.h  cloud.h  config.h  cube.h  entity.h  framebuffer.h  light.h  mesh.h  quad.h  renderer.h  resources.h  scene.h  shader.h  terrain.h  texture.h  transform.h  water.h  window.h
include/render_passes/: render_passes.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: basic.frag  basic.vert  bloom.frag  blur.frag  cloud.frag  cloud.vert  composite.frag  diffuse.frag  diffuse.vert  g_buffer.frag  g_buffer.vert  lighting.frag  quad.frag  quad.vert  shadow_map.vert  skybox.frag  skybox.vert  ssao.frag  terrain.frag  terrain.vert  volumetrics.frag  water.frag  water.vert  worley.comp
src/: chunk.cpp  entity.cpp  framebuffer.cpp  main.cpp  mesh.cpp  renderer.cpp  resources.cpp  shader.cpp  terrain.cpp  texture.cpp  window.cpp
src/render_passes/: ambient_occlusion_pass.cpp  bloom_pass.cpp  blur_pass.cpp  cloud_pass.cpp  composite_pass.cpp  diffuse_pass.cpp  g_buffer_pass.cpp  lighting_pass.cpp  shadow_pass.cpp  sky_pass.cpp  sprite_pass.cpp  water_pass.cpp
